# json-fix

./: .gitignore  Cargo.toml  README.md  project_structure.txt
benches/: fix_benchmark.rs
examples/: quick_fix.rs
manifest/: diagnostic_manifest.ron  regex_map.ron
src/: fixer.rs  lib.rs
src/diagnostics/: array.rs  bracket.rs  colon.rs  comma.rs  diagnoser.rs  diagnostics.rs  escape.rs  js_style.rs  key.rs  markdown.rs  misc.rs  mod.rs  quote.rs  structure.rs
src/fixers/: fixer.rs  mod.rs
src/fixers/array/: fixer.rs  mod.rs  subfixes.rs
src/fixers/arrays/: fixer.rs  mod.rs  subfixes.rs
src/fixers/bracket/: fixer.rs  mod.rs  subfixes.rs
src/fixers/brackets/: fixer.rs  mod.rs  subfixes.rs
src/fixers/colon/: fixer.rs  mod.rs  subfixes.rs
src/fixers/comma/: fixer.rs  mod.rs  subfixes.rs
src/fixers/escape/: fixer.rs  mod.rs  subfixes.rs
src/fixers/js_style/: fixer.rs  mod.rs  subfixes.rs
src/fixers/key/: fixer.rs  mod.rs  subfixes.rs
src/fixers/keys/: fixer.rs  mod.rs  subfixes.rs
src/fixers/markdown/: fixer.rs  mod.rs  subfixes.rs
src/fixers/misc/: fixer.rs  mod.rs  subfixes.rs
src/fixers/quote/: fixer.rs  mod.rs  subfixes.rs
src/fixers/quotes/: fixer.rs  mod.rs  subfixes.rs
src/fixers/structure/: fixer.rs  mod.rs  subfixes.rs
src/generated_patterns/regex/: misc.rs  mod.rs
src/macros/: fixer_macros.rs  mod.rs
src/meta/: diagnostic_codegen.rs  diagnostic_manifest_loader.rs  fixer_macro_invoker.rs  mod.rs  regex_manifest_codegen.rs
src/orchestrator/: diag_commander.rs  fix_commander.rs  fix_runner.rs  fixer.rs  fixer_legacy.rs  mod.rs
src/types/: diagnostic_core.rs  diagnostic_meta.rs  emotion_phase.rs  fix_environment.rs  fix_outcome.rs  fix_report.rs  fix_scope.rs  fix_step.rs  fixer_context.rs  fixer_flags.rs  json_error.rs  manifest.rs  mod.rs
src/utils/: diagnostic_utils.rs  fancy_regex_utils.rs  json_utils.rs  logging_utils.rs  mod.rs  regex_loader.rs  regex_utils.rs  souldiag_utils.rs  soulfixer_utils.rs  span_utils.rs  string_utils.rs  token_utils.rs
tests/: fix_arrays_tests.rs  fix_brackets_tests.rs  fix_commas_tests.rs  fix_escape_tests.rs  fix_keys_tests.rs  fix_markdown_tests.rs  fix_misc_tests.rs  fix_quotes_tests.rs  fixer.rs
