[package]
name = "json-fix"
version = "0.1.0"
edition = "2021"
description = "Robust JSON repair engine for fixing malformed or partial JSON strings, especially from AI output"
license = "MIT"
repository = "https://github.com/MTraveller/json-fix"

[dependencies]
criterion = "0.6.0"
fancy-regex = "0.14"
serde_json = "1"
