[package]
name = "json-fix"
version = "0.1.1"
edition = "2021"
description = "Robust JSON repair engine for fixing malformed or partial JSON strings, especially from AI output"
license = "MIT"
repository = "https://github.com/MTraveller/json-fix"
categories = ["data-structures", "parsing", "text-processing"]
keywords = ["json", "repair", "ai", "fix", "parser"]
documentation = "https://docs.rs/json-fix"

[dependencies]
fancy-regex = "0.14.0"
once_cell = "1.17.1"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["standard"]
standard = []
aggressive = []

[dev-dependencies]

